Production Deployment Fixes & Code Cleanup
 Backend Deployment Fixes:
- Fixed port configuration for Render (5001  10000)
- Enhanced CORS configuration with explicit frontend URL
- Added comprehensive error logging and debugging
- Improved database connection handling with timeouts
- Added health check endpoints (/health, /api/health)
- Enhanced server startup with detailed logging

 Frontend Improvements:
- Updated API timeout for production (10s  30s)
- Enhanced error handling with better user messages
- Improved CORS credentials handling
- Added connection test functionality

 Code Cleanup & Optimization:
- Removed 30+ unnecessary files and directories
- Deleted debug/development components
- Removed all test files and directories
- Cleaned up unused assets and scripts
- Removed development-only routes
- Streamlined package.json scripts

 Files Removed:
- Debug components (ApiTest, MobileTestComponent, MobileTest)
- Test files and directories
- Development scripts (image upload, verification)
- Unused assets (PNG files, README files)
- Empty directories

 Production Ready:
- Optimized for Render deployment
- Clean codebase with only essential files
- Enhanced error handling and logging
- Improved performance and reliability

 Ready for production deployment on Render!

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-NODE_ENV=development
-PORT=5001
+NODE_ENV=production
+PORT=10000
 MONGODB_URI=mongodb+srv://Kaaju:Kkbff27@kaaju.y598pva.mongodb.net/shopease
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_complex
 JWT_EXPIRES_IN=7d
@@ -11,6 +11,6 @@ RAZORPAY_KEY_SECRET=test_secret_key_for_demo_purposes_only
 CLOUDINARY_CLOUD_NAME=Jarvis
 CLOUDINARY_API_KEY=162564566254619
 CLOUDINARY_API_SECRET=35cGG3NBK4X-sMituOneo83qIUY
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://shopease-wlmj.onrender.com
 ADMIN_EMAIL=admin@shopease.com
 ADMIN_PASSWORD=admin123456
