--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:5001/api
+VITE_API_URL=https://shopping-backend-7hgn.onrender.com/api
 
 # Stripe Configuration (for payments)
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_51234567890abcdef_demo_key_for_testing_purposes_only
@@ -9,7 +9,7 @@ VITE_RAZORPAY_KEY_ID=rzp_test_DGf9MYPa17Bcyd
 
 # App Configuration
 VITE_APP_NAME=ShopEase
-VITE_APP_URL=http://localhost:5173
+VITE_APP_URL=https://shopease-wlmj.onrender.com
 
 # Analytics (optional)
 VITE_GOOGLE_ANALYTICS_ID=your_google_analytics_id
