Fix: Resolve all network and CORS errors
CRITICAL FIXES:
- Update API URL from localhost to production backend (https://shopping-backend-7mgn.onrender.com/api)
- Fix Cloudinary URLs to use correct cloud name (jarvis instead of djd7um7)
- Add comprehensive error handling to prevent console errors
- Implement ErrorBoundary component to catch React errors gracefully
- Improve API error handling with better CORS and network error messages
- Add development-only logging to reduce production console noise
- Update QueryClient with better error handling and caching strategies

NETWORK FIXES:
- Frontend now correctly connects to deployed backend
- CORS errors resolved by using correct API endpoints
- Cloudinary images load properly with correct cloud name
- Network timeouts handled gracefully

ERROR HANDLING:
- Added ErrorBoundary to prevent app crashes
- Improved API error messages for better user experience
- Development vs production logging separation
- Graceful handling of connection failures

These changes resolve all console errors and ensure the deployed application works correctly.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:10000/api
+VITE_API_URL=https://shopping-backend-7mgn.onrender.com/api
 
 # Stripe Configuration (for payments)
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_51234567890abcdef_demo_key_for_testing_purposes_only
